base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebanking
spec:
  selector:
    app: homebanking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
