base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app1-route
  labels:
    app: app1
spec:
  to:
    kind: Service
    name: app1-service
  port:
    targetPort: 80
  tls:
    termination: edge
